--- a/blog/templates/layouts/head.html
+++ b/blog/templates/layouts/head.html
@@ -8,4 +8,5 @@
 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 <!-- Custom styles for this template -->
 <link href="{% static 'css/style.css' %}" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/all.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.1/css/v4-shims.css"
