--- a/blog/templates/layouts/header.html
+++ b/blog/templates/layouts/header.html
@@ -20,7 +20,7 @@
           </li>
           <li class="nav-item list-unstyled">
             <a class="nav-link" href="#" data-target="#navbardrop" data-toggle="collapse">
-              <i class="fa fa-caret-down"></i>
+              <i class="fas fa-bars"></i>
             </a>
           </li>
         </ul>
